--- a/K8sBridge/K8sBridge.csproj
+++ b/K8sBridge/K8sBridge.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\K8sBridge.Application\K8sBridge.Application.csproj" />
+  </ItemGroup>
+
 </Project>
