Add package props

--- a/K8sBridge/K8sBridge.csproj
+++ b/K8sBridge/K8sBridge.csproj
@@ -5,6 +5,9 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	  <PackAsTool>true</PackAsTool>
+	  <ToolCommandName>k8s-bridge</ToolCommandName>
+	  <Version>0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
