--- a/K8sBridge/Properties/launchSettings.json
+++ b/K8sBridge/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "K8sBridge": {
       "commandName": "Project",
-      "commandLineArgs": "ra-service-app-svc -n pki-lab -o app-port-http -p 50080 -o app-port-https -p 50443"
+      "commandLineArgs": "whoami-webapp -n utility -o http -p 50080"
     }
   }
 }
