--- a/K8sBridge/K8sBridge.csproj
+++ b/K8sBridge/K8sBridge.csproj
@@ -2,12 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-	  <PackAsTool>true</PackAsTool>
-	  <ToolCommandName>k8s-bridge</ToolCommandName>
-	  <Version>0.1</Version>
+    <IsPackable>true</IsPackable>
+	<PackAsTool>true</PackAsTool>
+	<ToolCommandName>k8s-bridge</ToolCommandName>
   </PropertyGroup>
 
   <ItemGroup>
