--- a/K8sBridge.Domain/K8sBridge.Domain.csproj
+++ b/K8sBridge.Domain/K8sBridge.Domain.csproj
@@ -3,4 +3,11 @@
   <PropertyGroup>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FunicularSwitch.Generators" Version="4.2.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
